--- a/src/Gasset/css/ummu.css
+++ b/src/Gasset/css/ummu.css
@@ -4,6 +4,11 @@
     background-size: cover;
 }
 
+.bg-disabled {
+    background-color: #e9ecef;
+    opacity: 1;
+}
+
 .form-control-xs {
     height: calc(1em + 0.3rem + 1px);
     padding: 0.25rem 0.5rem;
