--- a/src/Gasset/css/ummu.css
+++ b/src/Gasset/css/ummu.css
@@ -298,3 +298,13 @@ button.bg-purple:focus {
 .border-left-purple {
   border-left: 0.25rem solid #800080 !important;
 }
+
+.json-display {
+  display: block;
+  width: 100%;
+  height: 750px;
+  border: 1px solid #000;
+  margin: 0;
+  padding: 10px 20px;
+  word-break: break-all;
+}
