--- a/src/Gasset/css/ummu.css
+++ b/src/Gasset/css/ummu.css
@@ -55,6 +55,12 @@ table.dataTable thead tr > .dtfc-fixed-left {
   color: #fff;
 }
 
+.tb-dt1 thead tr,
+.tb-dt1 thead tr > .dtfc-fixed-left {
+  background-color: #34517d;
+  color: #fff;
+}
+
 
 
 .accordion {
