--- a/src/Gasset/css/ummu.css
+++ b/src/Gasset/css/ummu.css
@@ -534,8 +534,8 @@ button.bg-purple:focus {
   color: #800080 !important;
 }
 
-.ummu-nav-tabs .nav-tabs .nav-link.active,
-.ummu-nav-tabs .nav-tabs .nav-item.show .nav-link {
+.ummu-nav .nav-tabs .nav-link.active,
+.ummu-nav .nav-tabs .nav-item.show .nav-link {
     border-top-style: solid;
     border-top-width: 3px;
     border-top-color: #800080;
