--- a/src/Gasset/css/ummu.css
+++ b/src/Gasset/css/ummu.css
@@ -600,3 +600,15 @@ border-radius: 0.25rem;
     border-radius: 12px;
     box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
 }
+
+.ummuDT.dataTable>thead>tr>th {
+    padding: 2px 6px;
+}
+
+.ummuDT.dataTable>tbody>tr>td {
+    padding: 2px 6px;
+}
+
+.ummuDT.dataTable {
+    border: 1px solid #d7d7d7;
+}
