--- a/src/Gasset/css/ummu.css
+++ b/src/Gasset/css/ummu.css
@@ -622,3 +622,40 @@ border-radius: 0.25rem;
 .hide-month .ui-datepicker-month {
     display: none !important;
 }
+
+
+
+
+#gauge_wrapper { width: 40%; height: 250px; position: relative; }
+#gauge_chart_div { width: 100%; height: 100%; }
+
+/* Floating Text untuk Gauge */
+.gauge-label {
+    top: 50%;
+    position: absolute;
+    font-weight: bold;
+    z-index: 10;
+}
+
+.percent-text {
+    top: 50%;
+    color: #3F51B5;
+    font-size: 10px;
+}
+
+.diff-text {
+    top: 50%;
+    right: -10%;
+    color: #000;
+    font-size: 10px;
+}
+
+.text-outline {
+  color: #000;
+  /* Bayangan ke atas, bawah, kiri, kanan, dan diagonal */
+  text-shadow: 
+    -1px -1px 0 #fff,  
+     1px -1px 0 #fff,
+    -1px  1px 0 #fff,
+     1px  1px 0 #fff;
+}
